--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,8 +40,8 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li {% if page.active_element == 'sip' %}class="active"{%endif%}><a href="/sip">The Protocol</a></li>
-            <li {% if page.active_element == 'pktsio' %}class="active"{%endif%}><a href="/pktsio">pkts.io</a></li>
-            <li {% if page.active_element == 'sipstackio' %}class="active"{%endif%}><a href="/sipstackio">sipstack.io</a></li>
+            <li {% if page.active_element == 'pktsio' %}class="active"{%endif%}><a href="/pkts">pkts.io</a></li>
+            <li {% if page.active_element == 'sipstackio' %}class="active"{%endif%}><a href="/sipstack">sipstack.io</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
