updated so that sipstack.io link now goes to the sipstack.io site

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,7 @@
           <ul class="nav navbar-nav">
             <li {% if page.active_element == 'sip' %}class="active"{%endif%}><a href="/sip">The Protocol</a></li>
             <li {% if page.active_element == 'pktsio' %}class="active"{%endif%}><a href="/pktsio">pkts.io</a></li>
-            <li {% if page.active_element == 'sipstackio' %}class="active"{%endif%}><a href="/sipstackio">sipstack.io</a></li>
+            <li {% if page.active_element == 'sipstackio' %}class="active"{%endif%}><a href="http://www.sipstack.io">sipstack.io</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
