--- a/_includes/sip.html
+++ b/_includes/sip.html
@@ -5,6 +5,7 @@
          <li><a href="#sipBasics">SIP Basics</a></li>
          <li><a href="#transactionsAndDialogs">Transactions &amp; Dialogs</a></li>
          <li><a href="#routing">Routing</a></li>
+         <li><a href="#presence">Presence</a></li>
       </ul>
    </div>
 </div>
