--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,7 +40,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li {% if page.active_element == 'sip' %}class="active"{%endif%}><a href="/sip">The Protocol</a></li>
-            <li {% if page.active_element == 'siplib' %}class="active"{%endif%}><a href="/siplib">SIP Lib</a></li>
+            <li {% if page.active_element == 'siplib' %}class="active"{%endif%}><a href="http://www.siplib.io">siplib.io</a></li>
             <li {% if page.active_element == 'pktsio' %}class="active"{%endif%}><a href="/pktsio">pkts.io</a></li>
             <li {% if page.active_element == 'sipstackio' %}class="active"{%endif%}><a href="http://www.sipstack.io">sipstack.io</a></li>
           </ul>
